fixed scrollbar positioning

--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,22 @@
 	--steelBlue: #336699;	
 }
 
-/* all elements: Include padding and border in the element's total width and height */
+/* border-box tutorial
+When you set the width/height of an element, the 
+element often appears bigger than you have set 
+(because the element's border and padding are added
+to the element's specified width/height).
+
+by default: 
+	actual height = height + padding + border
+	actual width = width + padding + border
+	
+using box-sizing: border-box:
+	actual width/height = exactly the width/height
+		you set in the element
+*/
+/* all elements: Include padding and border in 
+the element's total width and height */
 * {	box-sizing: border-box;}
 
 body {
@@ -26,29 +41,6 @@ body {
 	min-height: 100vh;	/* 100% of viewport */
 }
 
-
-.body_wrapper {
-/* 	display: flex;
-	flex-direction: column;
-	
-	margin: 0 auto;		/ top right bottom left /
-	
-	min-height: 100%;
-	max-width: 75%; */
-	height: calc(100vh - 360px);
-	overflow: hidden; /* keep page from scrolling */
-	
-	box-sizing: border-box;
-	display: flex;
-	flex-direction: column;
-	flex: 1 0 auto;
-	max-width: 75%;
-	width: 100%;
-	margin: 0 auto;
-	padding-bottom: 30px;
-}
-
-
 /* Prevent body from scrolling */
 html, body {
 	height: 100%;
@@ -56,22 +48,73 @@ html, body {
 	margin: 0;
 }
 
+/* flex tutorial
+flex: <flex-grow> <flex-shrink> <flex-basis>;
+    flex-grow: how much the item expands 
+			   when there’s extra space.
+    flex-shrink: how much the item shrinks 
+				 when space is tight.
+    flex-basis: the item’s initial size 
+		before growing or shrinking 
+		(auto = use width/height/content).
+		
+flex: 1 0 auto; -> 
+    1 = can grow to take extra space.
+    0 = will not shrink smaller than its basis.
+    auto = start at its natural/content size.
+    Result: fills leftover space if available, 
+	but won’t shrink below its content size.
+	
+flex: 1 1 auto; ->
+    1 = can grow.
+    1 = can shrink.
+    auto = start at natural/content size.
+    Result: fills leftover space, but can
+	also shrink if space is too tight.
+*/
 
 
-/* Main grows and gets its own scrollbar */
-.main {
-	flex: 1 1 auto;
+/* gets its own scrollbar */
+.body_wrapper {
+	overflow-y: auto; /* allow scrolling */
 	
-	overflow-y: auto;	/* only main can scroll */
-	padding-bottom: 10%;
+	display: flex;
+	flex-direction: column;
+	flex: 1 0 auto;	
+
 	
+	width: 100%;
+	height: calc(100vh - 360px); /* 100% of viewport - header height? */
+/* 	padding-bottom: 30px; */
+	margin-bottom: 30px;
+/* 	margin: 0 auto;	 */	/* 0: no top/bottom margin, 
+						auto: split equally on both sides
+							  whatever horizontal space
+							  is left over. */
 	/* Firefox */
 	scrollbar-width: thin;
 	scrollbar-color: var(--orangeDark) transparent;
-
 }
 
+/* Main grows and gets its own scrollbar */
+.main {
+/* 	flex: 1 1 auto; */
+	display: block;
+	width: 100%;
+	max-width: 75%;
+	margin: 0 auto;		/* 0: no top/bottom margin, 
+						auto: split equally on both sides
+							  whatever horizontal space
+							  is left over. */
+	
+/* 	overflow-y: hidden; */	/* disable scrolling */
+	padding-bottom: 10%;
+}
+
+
+/*-------------------------------------*/
 /*////////// HEADER/FOOTER ////////////*/
+/*-------------------------------------*/
 
 nav, header, footer {
 	flex-shrink: 0; /* keep their height fixed */
@@ -124,8 +167,9 @@ nav, header, footer {
 	font-weight: bold;
 	letter-spacing: 0.05rem;
 }
-
-/*///////// HOROZONTAL BAR STYLING ////////////*/
+/*-------------------------------------*/
+/*///// HOROZONTAL BAR STYLING //////////*/
+/*-------------------------------------*/
 
 .containerTitle hr {
 	background-color: var(--canvas);
@@ -147,8 +191,9 @@ nav, header, footer {
 	border: none;
 	display: inline-block; 
 }
-
-/*////////////* TEXT, H1-H4, PARAGRAPH ///////////////////*/
+/*-------------------------------------*/
+/*/////* TEXT, H1-H4, PARAGRAPH ////////*/
+/*-------------------------------------*/
 body {
 	font-family: Montserrat;
 	font-size: 14px;
@@ -183,8 +228,9 @@ h3 {
 }
 
 
-
+/*-------------------------------------*/
 /*/////////////// LINKS /////////////////////*/
+/*-------------------------------------*/
 a {
 	text-transform: uppercase;
 	color: var(--cerulean);
@@ -218,7 +264,9 @@ a:active {
 	text-decoration: underline;
 }
 
+/*-------------------------------------*/
 /*/////////////// TABLE //////////////////*/
+/*-------------------------------------*/
 
 table {
 	border-collapse: collapse;
@@ -261,8 +309,9 @@ td {
 	height: auto;	/* maintain size ratio */
 }
 
+/*-------------------------------------*/
 /*/////////////// NAV BAR //////////////////*/
-
+/*-------------------------------------*/
 nav {
 }
 
